add: server files with clustering

--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   },
   "scripts": {
     "dev": "bun --watch src/index.ts"
+  },
+  "dependencies": {
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.3",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0"
   }
 }
