--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^17.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.16.4"
   }
 }
