--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^24.0.14",
-    "ts-node": "^10.9.2"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
@@ -18,6 +20,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemon": "^3.1.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.4"
