--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
+    "@types/ioredis": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/nodemon": "^3.1.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.16.4"
   }
 }
