--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@types/ioredis": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/nodemon": "^3.1.1",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
-    "mongoose": "^8.16.4"
+    "mongoose": "^8.16.4",
+    "multer": "^2.0.2"
   }
 }
