--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.3",
     "@types/ioredis": "^5.0.0",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^2.0.0",
     "@types/nodemon": "^3.1.1",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
