--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
   "dependencies": {
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
+    "@types/express-validator": "^3.0.2",
     "@types/ioredis": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/nodemon": "^3.1.1",
+    "@types/uuid": "^10.0.0",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "ioredis": "^5.6.1",
+    "job-board-api": ".",
     "mongoose": "^8.16.4",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
+    "uuid": "^11.1.0"
   }
 }
