--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dev": "bun --watch src/index.ts"
   },
   "dependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/express-validator": "^3.0.2",
@@ -26,7 +28,9 @@
     "@types/nodemailer": "^6.4.17",
     "@types/nodemon": "^3.1.1",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
