--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^5.0.3",
     "@types/express-validator": "^3.0.2",
     "@types/ioredis": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
@@ -36,6 +37,7 @@
     "express-validator": "^7.2.1",
     "ioredis": "^5.6.1",
     "job-board-api": ".",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
