--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-board-api",
-  "module": "index.ts",
+  "module": "index.js",
   "type": "module",
   "private": true,
   "devDependencies": {
@@ -14,21 +14,10 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "dev": "bun --watch src/index.ts"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "@types/bcryptjs": "^3.0.0",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/dotenv": "^8.2.3",
-    "@types/express": "^5.0.3",
-    "@types/express-validator": "^3.0.2",
-    "@types/ioredis": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/mongoose": "^5.11.97",
-    "@types/multer": "^2.0.0",
-    "@types/nodemailer": "^6.4.17",
-    "@types/nodemon": "^3.1.1",
-    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
